# OTUS-CPP-Professional-HomeWork_2

./: CMakeLists.txt  IPElem.cpp  IPElem.h  IPFilter.cpp  IPFilter.h  README.md  main_IPFilter.cpp  test.cpp  test.h
.github/workflows/: release.yml
